# pr2_power_drivers

./: .travis.yml  CMakeLists.txt  stack.xml
.github/workflows/: ci.yml
ocean_battery_driver/: CHANGELOG.rst  CMakeLists.txt  battery_presence.yaml  expected_batteries.launch  mainpage.dox  manifest.xml  package.xml
ocean_battery_driver/scripts/: battery_notifier.py  monitor  view_batteries
ocean_battery_driver/src/ocean_battery_driver/: CMakeLists.txt  __init__.py  battery_check.cpp  ibps_panel.py  ocean.cpp  ocean.h  ocean_test.cpp  parseIBPS.py  server.cpp
ocean_battery_driver/ui/: battery_status_panel.fbp  battery_status_panel.xrc
power_monitor/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
power_monitor/cfg/: PowerMonitor.cfg
power_monitor/include/: observation.h  power_monitor.h  power_state_estimator.h
power_monitor/src/: observation.cpp  power_monitor.cpp  power_state_estimator.cpp
pr2_power_board/: .gitignore  CHANGELOG.rst  CMakeLists.txt  gui_power.xml  gui_power2.xml  mainpage.dox  manifest.xml  package.xml  setup.py
pr2_power_board/include/: power_comm.h  power_node.h  power_node2.h
pr2_power_board/scripts/: fake_powerboard.py  increase_fan.py  send_command  test_power.py  view_power
pr2_power_board/src/: CMakeLists.txt
pr2_power_board/src/power_node/: CMakeLists.txt  power_node.cpp  power_node2.cpp  power_node_simulator.cpp
pr2_power_board/src/pr2_power_board/: power_wires.py  pr2_power_board_panel.py
pr2_power_board/srv/: PowerBoardCommand2.srv
pr2_power_drivers/: CHANGELOG.rst  CMakeLists.txt  package.xml
